--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div class="research-content">
         <div class="research-image">
           <!-- Replace with your actual image source -->
-          <img src="./videos/combined.png" alt="Research Image"/>
+          <img src="./videos/Combined.png" alt="Research Image"/>
         </div>
         <div class="research-text">
           <h1>Our Research</h1>
