--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       <h1>Contact Us</h1>
       <div class="contact-wrapper">
         <!-- Circular button that redirects to mail -->
-        <a href="mailto:samarth.singhal@und.edu" class="contact-btn">Email Us</a>
+        <a href="mailto:connect@s-bios.com" class="contact-btn">Email Us</a>
       </div>
     </div>
     
