--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
     <!-- PAGE 5: OUR CLIENTS -->
     <div id="page5">
-      <h1 class="section-title">Our Clients</h1>
+      <h1 class="section-title">Individual-affiliated Publication</h1>
       <div class="client-carousel">
         <div class="swiper client-swiper">
           <div class="swiper-wrapper">
