--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 
     <!-- PAGE 5: OUR CLIENTS -->
     <div id="page5">
-      <h1 class="section-title">Our Partners</h1>
+      <h1 class="section-title">Individual Affiliated Publications</h1>
       <div class="client-carousel">
         <div class="swiper client-swiper">
           <div class="swiper-wrapper">
