--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                         <img src="images/NIH.png" alt="NIH">
                     </div>
                     <div class="logo-slide">
-                        <img src="images/google.webp" alt="Google">
+                        <img src="images/Google.webp" alt="Google">
                     </div>
                     <!-- Add more logos here if needed, but only one set -->
                      
