missing H&E fix attempt 1

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                      <!-- Image Item 3 -->
                      <div class="data-image-item">
                         <div class="data-image-placeholder">
-                             <img src="images/combined.png" alt="H&E Stain Analysis">
+                             <img src="images/Combined.png" alt="H&E Stain Analysis">
                         </div>
                         <p class="data-caption dark-text">Histopathology (H&E)</p>
                     </div>
