video demo cell typing

--- a/index.html
+++ b/index.html
@@ -162,6 +162,20 @@
         <!-- END SECTION: Bioinformatics Consultancy -->
 
 
+        <!-- START SECTION: Video Demo -->
+    <section id="video-demo" class="section-padding">
+        <div class="container">
+            <h2 class="section-title" data-aos="fade-up">Cell Typing in H&Es using AI</h2>
+            <div class="video-container" data-aos="fade-up" data-aos-delay="100">
+                <video controls width="100%">
+                    <source src="videos/celltyping.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+        </div>
+    </section>
+    <!-- END SECTION: Video Demo -->
+
         <!-- 4. SECTION: Affiliated Publications -->
     <section id="publications" class="section-padding section-dark-bg">
         <div class="container">
